--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "firebase-admin": "^11.5.0",
         "morgan": "^1.10.0",
         "node-sass": "^8.0.0",
+        "nodemailer": "^6.9.1",
         "socket.io": "^4.6.1",
         "xlsx": "^0.18.5"
     },
